k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: llm
  labels:
    name: llm
    app.kubernetes.io/part-of: llm-devops-project
