k8s/04-ollama-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-service
  namespace: llm
  labels:
    app: ollama
    app.kubernetes.io/part-of: llm-devops-project
spec:
  type: ClusterIP
  selector:
    app: ollama
  ports:
    - name: http
      port: 11434
      targetPort: 11434
      protocol: TCP
